Fixed z-index on placeholder

--- a/css/square.css
+++ b/css/square.css
@@ -138,6 +138,7 @@
 	position: absolute;
 	margin: 8px 20px 0 28px;
 	color: #808080;
+	z-index: 1;
 }
   .VS-search .VS-search-box.VS-focus .VS-placeholder, .VS-hidden {
       display: none;
